--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -10,5 +10,9 @@
 <body>
 
 </body>
-
+<footer>
+    <div class="pie-de-pag">
+        <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian Dentezano, Marcos Borri</h4>
+    </div>
+</footer>
 </html>
