--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -4,10 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabajo Practico 1</title>
 </head>
 
 <body>
+    <header>
+        <div>
+            <div>
+                <img src="./img/utnlogo.jpeg" alt="">
+            </div>
+            <div>
+                <h1>Tu Videojuego</h1>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <div class="pie-de-pag">
+            <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian
+                Dentezano, Marcos Borri</h4>
+        </div>
+    </footer>
 
 </body>
 
