--- a/TrabajoPractico1/contact.html
+++ b/TrabajoPractico1/contact.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo Practico 1</title>
+    <title>Document</title>
 </head>
-
 <body>
     <header>
         <div>
@@ -27,13 +25,29 @@
         </nav>
     </header>
 
+    <main>
+        <div class="Formulario"></div>
+            <h2 class="header2formulario">Formulario de contacto</h2>
+            <div class="nombre">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+            </div>
+            <div class="email">
+                <label for="email">Correo Electronico:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="mensaje">
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+            </div>
+            <button type="submit">Enviar Mensaje</button>
+    </main>
+
     <footer>
         <div class="pie-de-pag">
             <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian
                 Dentezano, Marcos Borri</h4>
         </div>
     </footer>
-
 </body>
-
 </html>
