--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -5,39 +5,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Practico 1</title>
+    <link rel="stylesheet" href="./css/Pages/index.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
-<body>
-    <header>
-        <div>
-            <div>
-                <img src="./img/utnlogo.jpeg" alt="">
-            </div>
-            <div>
-                <h1>Tu Videojuego</h1>
-            </div>
+<body class="body">
+    <header class="header">
+        <div class="logo">
+            <img src="./img/utnlogo.jpeg" alt="">
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+        <nav class="nav">
+            <ul class="lista_ordenada">
+                <li><a href="index.html"><i class="fas fa-home "></i>Home</a>
+                </li>
+                <li><a href="servicios.html"><i
+                            class="fas fa-concierge-bell"></i>Servicios</a></li>
+                <li><a href="galeria.html"><i
+                            class="fas fa-image "></i>Galeria</a></li>
+                <li><a href="contacto.html"><i
+                            class="fas fa-envelope"></i>Contacto</a></li>
             </ul>
         </nav>
+        <div>
+
+        </div>
     </header>
 
-    <footer>
-        <div class="pie-de-pag">
-            <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian
-                Dentezano, Marcos Borri</h4>
+    <main class="main">
+        <div class="title">
+            <h1><u> Find your game is find your fun</u></h1>
+        </div>
+
+        <section class="video-section">
+            <div>
+                <video class="video"
+                    src="./img/stock-footage-young-gamer-playing-online-video-games-on-a-computer-monitor-with-green-screen-copy-space-streamer.webm"
+                    autoplay muted loop></video>
+            </div>
+            <div class="text-video">
+                <h2>Estas listo para encontrar tu solucion para divertirte en
+                    tus
+                    tiempos libres</h2>
+            </div>
+        </section>
+
+        <section class="section-mision">
+            <h2>Mision</h2>
+            <p>La misión es mostrate los mejores videojuegos en diferentes
+                consolas para que puedas divertirte solo y con compañeros. Desde
+                juegos retros a los ultimos lanzamientos, recorre nuestras
+                secciones para conocer mas.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                hic totam distinctio, eius tempore itaque id ullam placeat
+                dolor! Beatae velit corporis eos quis totam at dolor, dolorum
+                doloribus eum?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
+                voluptatem provident, nisi repudiandae consectetur beatae eaque
+                quisquam. Ratione beatae, deserunt, corporis corrupti excepturi,
+                quo dignissimos quia sint optio deleniti at!</p>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div>
+            <p> © 2025 - Desarrollado por Borri, Marcos, Romero, Ramos Cavero
+                Luciano, Panzone Franco, Dentezano Julian, Romero Mariano</p>
+        </div>
+        <div>
+            <a href="https://github.com/Marianoromero8/Programacion-III"
+                target="_blank"><i class="fab fa-github"></i>Github</a>
         </div>
     </footer>
 
 </body>
-<footer>
-    <div class="pie-de-pag">
-        <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian Dentezano, Marcos Borri</h4>
-    </div>
-</footer>
+
 </html>
