fix: font change

--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./css/Pages/index.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -35,7 +40,7 @@
 
     <main class="main">
         <div class="title">
-            <h1><u> Find your game is find your fun</u></h1>
+            <h1>Find your game is find your fun</h1>
         </div>
 
         <section class="video-section">
@@ -52,7 +57,7 @@
         </section>
 
         <section class="section-mision">
-            <h2>Mision</h2>
+            <h2>Misión</h2>
             <p>La misión es mostrate los mejores videojuegos en diferentes
                 consolas para que puedas divertirte solo y con compañeros. Desde
                 juegos retros a los ultimos lanzamientos, recorre nuestras
