agregar mision mas completa

--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -19,7 +19,7 @@
 <body class="body">
     <header class="header">
         <div class="logo">
-            <img src="./img/utnlogo.jpeg" alt="">
+            <img src="./img/utnlogo.svg" alt="" class="image">
         </div>
         <nav class="nav">
             <ul class="lista_ordenada">
@@ -75,7 +75,7 @@
 
     <footer class="footer">
         <div>
-            <p> © 2025 - Desarrollado por Borri, Marcos, Romero, Ramos Cavero
+            <p> © 2025 - Desarrollado por: Borri Marcos, Ramos Cavero
                 Luciano, Panzone Franco, Dentezano Julian, Romero Mariano</p>
         </div>
         <div>
