--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Practico 1</title>
     <link rel="stylesheet" href="./css/Pages/index.css">
+    <link rel="stylesheet" href="./css/Components/footer.css">
+    <link rel="stylesheet" href="./css/Components/header.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
