cambios en los estilos

--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
 <body class="body">
     <header class="header">
         <div class="logo">
-            <img src="./img/utnlogo.svg" alt="" class="image">
+            <img src="./img/utnlogo.svg" alt="logo UTN" class="image">
         </div>
         <nav class="nav">
             <ul class="lista_ordenada">
@@ -35,9 +35,6 @@
                             class="fas fa-envelope"></i>Contacto</a></li>
             </ul>
         </nav>
-        <div>
-
-        </div>
     </header>
 
     <main class="main">
@@ -46,32 +43,37 @@
         </div>
 
         <section class="video-section">
-            <div>
-                <video class="video"
-                    src="./img/stock-footage-young-gamer-playing-online-video-games-on-a-computer-monitor-with-green-screen-copy-space-streamer.webm"
-                    autoplay muted loop></video>
-            </div>
-            <div class="text-video">
-                <h2>Estas listo para encontrar tu solucion para divertirte en
-                    tus
-                    tiempos libres</h2>
-            </div>
+            <video class="video"
+                src="./img/stock-footage-young-gamer-playing-online-video-games-on-a-computer-monitor-with-green-screen-copy-space-streamer.webm"
+                autoplay muted loop></video>
+            <h2>Estas listo para encontrar tu solucion para divertirte en
+                tus
+                tiempos libres</h2>
         </section>
 
         <section class="section-mision">
             <h2>Misión</h2>
-            <p>La misión es mostrate los mejores videojuegos en diferentes
-                consolas para que puedas divertirte solo y con compañeros. Desde
-                juegos retros a los ultimos lanzamientos, recorre nuestras
-                secciones para conocer mas.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                hic totam distinctio, eius tempore itaque id ullam placeat
-                dolor! Beatae velit corporis eos quis totam at dolor, dolorum
-                doloribus eum?
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
-                voluptatem provident, nisi repudiandae consectetur beatae eaque
-                quisquam. Ratione beatae, deserunt, corporis corrupti excepturi,
-                quo dignissimos quia sint optio deleniti at!</p>
+            <p>Nuestra misión es acercarte al fascinante mundo de los
+                videojuegos, ofreciéndote una cuidada selección de títulos para
+                todas las consolas y gustos. Desde los clásicos retro que
+                marcaron historia hasta los últimos lanzamientos que están
+                revolucionando la industria, queremos que encuentres en nuestro
+                espacio una fuente de entretenimiento, descubrimiento y
+                nostalgia.
+                <br>
+                Buscamos crear una comunidad donde puedas compartir tu pasión,
+                descubrir nuevas experiencias y revivir aquellas que te
+                acompañaron en distintos momentos de tu vida. Ya sea que juegues
+                solo o con amigos, en familia o con tu comunidad online, creemos
+                que los videojuegos tienen el poder de unir, emocionar y
+                desafiar.
+                <br>
+                Recorriendo nuestras secciones vas a encontrar recomendaciones,
+                análisis, curiosidades y mucho más, pensados para que siempre
+                tengas algo nuevo por explorar. Porque para nosotros, jugar no
+                es solo un pasatiempo: es una forma de conectar, de expresarse y
+                de disfrutar al máximo.
+            </p>
         </section>
     </main>
 
