--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,7 @@
 
     <footer>
         <div class="pie-de-pag">
-            <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian
-                Dentezano, Marcos Borri</h4>
+            <h4>Mariano Romero, Luciano Ramos Cavero, Franco Panzone, Julian Dentezano, Marcos Borri</h4>
         </div>
     </footer>
 </body>
