--- a/TrabajoPractico1/galeria.html
+++ b/TrabajoPractico1/galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
         rel="stylesheet">
 </head>
+
 <body class="body">
     <header class="header">
         <div class="logo">
@@ -26,7 +28,7 @@
                             class="fas fa-concierge-bell"></i>Servicios</a></li>
                 <li><a href="galeria.html"><i
                             class="fas fa-image "></i>Galeria</a></li>
-                <li><a href="contacto.html"><i
+                <li><a href="contact.html"><i
                             class="fas fa-envelope"></i>Contacto</a></li>
             </ul>
         </nav>
@@ -53,4 +55,5 @@
         </div>
     </footer>
 </body>
+
 </html>
