fix title and css

--- a/TrabajoPractico1/index.html
+++ b/TrabajoPractico1/index.html
@@ -39,7 +39,7 @@
 
     <main class="main">
         <div class="title">
-            <h1>Find your game is find your fun</h1>
+            <h1>Find your game, find your fun</h1>
         </div>
 
         <section class="video-section">
