--- a/TrabajoPractico2/html/punto3.html
+++ b/TrabajoPractico2/html/punto3.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punto 3</title>
-    <link rel="stylesheet" href="punto3.css">
-    <script type="module" src="./punto3.js"></script>
+    <link rel="stylesheet" href="../css/punto3.css">
+    <script type="module" src="../js/punto3.js"></script>
 </head>
 
 <body>
