punto 3 y 4 conectados al index

--- a/TrabajoPractico2/html/punto3.html
+++ b/TrabajoPractico2/html/punto3.html
@@ -29,7 +29,7 @@
 
     <div class="div-button">
         <button id="boton-resaltar">Resaltar</button>
-        <button id="boton-ocultar">Ocultar</button>
+        <button id="boton-ocultar">Ocultar/Mostrar</button>
     </div>
 
     <a href="../index.html"><button>Back</button></a>
