--- a/TrabajoPractico2/html/punto4.html
+++ b/TrabajoPractico2/html/punto4.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejercicio4</title>
-    <link rel="stylesheet" href="/css/punto4.css">
+    <title>Punto 4</title>
+    <link rel="stylesheet" href="../css/punto4.css">
+    <script type="module" src="../js/punto4.js"></script>
 </head>
+
 <body>
     <form>
         <input id="inputItem" type="text">
@@ -13,6 +16,8 @@
     </form>
     <ul></ul>
 
-    <script src="/js/punto4.js"></script>
+    <a href="../index.html"><button>Back</button></a>
+
 </body>
+
 </html>
