--- a/TrabajoPractico2/index.html
+++ b/TrabajoPractico2/index.html
@@ -12,10 +12,10 @@
     <header class="header">
         <h1>Trabajo Practico 2</h1>
         <div class="enlaces">
-            <a href="./punto1/dom.html">Punto 1</a>
+            <a href="./punto1/punto1.html">Punto 1</a>
             <a href="./punto2/punto2.html">Punto 2</a>
             <a href="./html/punto3.html">Punto 3</a>
-            <a href="./punto4/punto4.html">Punto 4</a>
+            <a href="./html/punto4.html">Punto 4</a>
             <a href="./punto5/punto5.html">Punto 5</a>
         </div>
     </header>
