--- a/TrabajoPractico2/index.html
+++ b/TrabajoPractico2/index.html
@@ -16,7 +16,7 @@
             <a href="./punto2/punto2.html">Punto 2</a>
             <a href="./html/punto3.html">Punto 3</a>
             <a href="./html/punto4.html">Punto 4</a>
-            <a href="./punto5/punto5.html">Punto 5</a>
+            <a href="./html/punto5.html">Punto 5</a>
         </div>
     </header>
 </body>
