HTML conectados, falta punto 2

--- a/TrabajoPractico2/html/punto5.html
+++ b/TrabajoPractico2/html/punto5.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punto 5 TP2</title>
+    <title>Punto 5</title>
 </head>
+
 <body>
     <form id="formulario">
-        <input type="text" name="texto" id="texto" placeholder="Ingrese su nombre">
-        <input type="email" name="email" id="email" placeholder="examplemail@mail.com">
-        <input type="number" name="edad" id="edad" placeholder="Ingrese su edad">
+        <input type="text" name="texto" id="texto"
+            placeholder="Ingrese su nombre">
+        <input type="email" name="email" id="email"
+            placeholder="examplemail@mail.com">
+        <input type="number" name="edad" id="edad"
+            placeholder="Ingrese su edad">
         <button onclick="enviarFormulario(event)">Enviar formulario</button>
-    </form> 
+    </form>
 
     <div id="resultadoNombre"></div>
     <div id="resultadoEmail"></div>
     <div id="resultadoEdad"></div>
 
-    <a href="../index.html"><button>back</button></a>
+    <a href="../index.html"><button>Back</button></a>
 </body>
-    <script src="punto5.js"></script>
+<script src="../js/punto5.js"></script>
+
 </html>
