--- a/TrabajoPractico2/index.html
+++ b/TrabajoPractico2/index.html
@@ -13,7 +13,7 @@
         <h1>Trabajo Practico 2</h1>
         <div class="enlaces">
             <a href="./html/punto1.html">Punto 1</a>
-            <a href="./punto2/punto2.html">Punto 2</a>
+            <a href="./html/punto2.html">Punto 2</a>
             <a href="./html/punto3.html">Punto 3</a>
             <a href="./html/punto4.html">Punto 4</a>
             <a href="./html/punto5.html">Punto 5</a>
